// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShortListDropDown modal is visible when merge is required 1`] = `
<div
  className="short-list"
>
  <div
    className="short-list--btn"
    onClick={[Function]}
  >
    <img
      alt=""
      src="Huskeliste.svg"
      title="Huskeliste"
    />
    <span
      className="short-list--btn-badge badge"
    >
      2
    </span>
  </div>
  <div
    className="short-list--content text-left slide-out"
  >
    <img
      alt="luk"
      className="short-list--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="short-list--header"
    >
      HUSKELISTE
    </div>
    <div
      className="short-list--empty-text text-center"
    />
    <div
      className="short-list--elements"
    >
      <div
        className="short-list-element"
      >
        <div
          className="short-list-element--cover-image"
        >
          <img
            alt=""
            onError={[Function]}
            src="https://metakompasset.demo.dbc.dk/api/cover/pid1"
          />
        </div>
        <div
          className="short-list-element--text"
        >
          <div
            className="short-list-element--header"
          >
            some title1
          </div>
          <div
            className="short-list-element--taxonomy-description"
          >
            some description1
          </div>
          <div
            className="short-list-element--origin"
          >
            Minder om noget1
          </div>
        </div>
        <img
          alt="luk"
          className="short-list-element--close-btn"
          onClick={[Function]}
          src="Kryds.svg"
        />
      </div>
      <div
        className="short-list-element"
      >
        <div
          className="short-list-element--cover-image"
        >
          <img
            alt=""
            onError={[Function]}
            src="https://metakompasset.demo.dbc.dk/api/cover/pid2"
          />
        </div>
        <div
          className="short-list-element--text"
        >
          <div
            className="short-list-element--header"
          >
            some title2
          </div>
          <div
            className="short-list-element--taxonomy-description"
          >
            some description2
          </div>
          <div
            className="short-list-element--origin"
          >
            Minder om noget2
          </div>
        </div>
        <img
          alt="luk"
          className="short-list-element--close-btn"
          onClick={[Function]}
          src="Kryds.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="modal-backdrop"
  >
    <div
      className="modal-window text-left "
    >
      <img
        alt="luk"
        className="modal-window--close-btn"
        onClick={undefined}
        src="Kryds.svg"
      />
      <div
        className="modal-window--header text-center"
      >
        <h3>
          2 bøger bliver overført til din huskeliste
        </h3>
      </div>
      <div
        className="modal-window--content"
      >
        <p>
          Der var noget i huskelisten før du loggede ind. Derfor overføres følgende til din i forvejen gemte huskeliste:
        </p>
        <ul>
          <li>
            some title3
          </li>
          <li>
            some title4
          </li>
        </ul>
      </div>
      <div
        className="modal-window--buttons text-center"
      >
        <span
          className="btn btn-success"
          onClick={[Function]}
        >
          OK
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShortListDropDown short list contains more than 3 elements, elements are added to top of list 1`] = `
<div
  className="short-list"
>
  <div
    className="short-list--btn"
    onClick={[Function]}
  >
    <img
      alt=""
      src="Huskeliste.svg"
      title="Huskeliste"
    />
    <span
      className="short-list--btn-badge badge"
    >
      4
    </span>
  </div>
  <div
    className="short-list--content text-left slide-out"
  >
    <img
      alt="luk"
      className="short-list--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="short-list--header"
    >
      HUSKELISTE
    </div>
    <div
      className="short-list--empty-text text-center"
    />
    <div
      className="short-list--elements"
    >
      <div
        className="short-list-element"
      >
        <div
          className="short-list-element--cover-image"
        >
          <img
            alt=""
            onError={[Function]}
            src="https://metakompasset.demo.dbc.dk/api/cover/pid4"
          />
        </div>
        <div
          className="short-list-element--text"
        >
          <div
            className="short-list-element--header"
          >
            some title4
          </div>
          <div
            className="short-list-element--taxonomy-description"
          >
            some description4
          </div>
          <div
            className="short-list-element--origin"
          >
            Minder om noget4
          </div>
        </div>
        <img
          alt="luk"
          className="short-list-element--close-btn"
          onClick={[Function]}
          src="Kryds.svg"
        />
      </div>
      <div
        className="short-list-element"
      >
        <div
          className="short-list-element--cover-image"
        >
          <img
            alt=""
            onError={[Function]}
            src="https://metakompasset.demo.dbc.dk/api/cover/pid3"
          />
        </div>
        <div
          className="short-list-element--text"
        >
          <div
            className="short-list-element--header"
          >
            some title3
          </div>
          <div
            className="short-list-element--taxonomy-description"
          >
            some description3
          </div>
          <div
            className="short-list-element--origin"
          >
            Minder om noget3
          </div>
        </div>
        <img
          alt="luk"
          className="short-list-element--close-btn"
          onClick={[Function]}
          src="Kryds.svg"
        />
      </div>
      <div
        className="short-list-element"
      >
        <div
          className="short-list-element--cover-image"
        >
          <img
            alt=""
            onError={[Function]}
            src="https://metakompasset.demo.dbc.dk/api/cover/pid2"
          />
        </div>
        <div
          className="short-list-element--text"
        >
          <div
            className="short-list-element--header"
          >
            some title2
          </div>
          <div
            className="short-list-element--taxonomy-description"
          >
            some description2
          </div>
          <div
            className="short-list-element--origin"
          >
            Minder om noget2
          </div>
        </div>
        <img
          alt="luk"
          className="short-list-element--close-btn"
          onClick={[Function]}
          src="Kryds.svg"
        />
      </div>
    </div>
    <div
      className="short-list--more-elements text-center"
    >
      <span
        className="short-list--more-elements-text"
      >
        1 bog mere på listen
      </span>
      <div
        className="short-list--more-elements-line"
      />
    </div>
    <div
      className="short-list--more-btn text-center"
    >
      <span
        className="btn btn-default text-center"
      >
        SE HELE LISTEN
      </span>
    </div>
  </div>
  <div
    className="modal-backdrop modal-hidden"
  >
    <div
      className="modal-window text-left modal-hidden "
    >
      <img
        alt="luk"
        className="modal-window--close-btn"
        onClick={undefined}
        src="Kryds.svg"
      />
      <div
        className="modal-window--header text-center"
      >
        <h3 />
      </div>
      <div
        className="modal-window--content"
      >
        <p>
          Der var noget i huskelisten før du loggede ind. Derfor overføres følgende til din i forvejen gemte huskeliste:
        </p>
        <ul />
      </div>
      <div
        className="modal-window--buttons text-center"
      >
        <span
          className="btn btn-success"
          onClick={[Function]}
        >
          OK
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShortListDropDown short list contains single element 1`] = `
<div
  className="short-list"
>
  <div
    className="short-list--btn"
    onClick={[Function]}
  >
    <img
      alt=""
      src="Huskeliste.svg"
      title="Huskeliste"
    />
    <span
      className="short-list--btn-badge badge"
    >
      1
    </span>
  </div>
  <div
    className="short-list--content text-left slide-out"
  >
    <img
      alt="luk"
      className="short-list--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="short-list--header"
    >
      HUSKELISTE
    </div>
    <div
      className="short-list--empty-text text-center"
    />
    <div
      className="short-list--elements"
    >
      <div
        className="short-list-element"
      >
        <div
          className="short-list-element--cover-image"
        >
          <img
            alt=""
            onError={[Function]}
            src="https://metakompasset.demo.dbc.dk/api/cover/pid1"
          />
        </div>
        <div
          className="short-list-element--text"
        >
          <div
            className="short-list-element--header"
          >
            some title1
          </div>
          <div
            className="short-list-element--taxonomy-description"
          >
            some description1
          </div>
          <div
            className="short-list-element--origin"
          >
            Minder om noget1
          </div>
        </div>
        <img
          alt="luk"
          className="short-list-element--close-btn"
          onClick={[Function]}
          src="Kryds.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="modal-backdrop modal-hidden"
  >
    <div
      className="modal-window text-left modal-hidden "
    >
      <img
        alt="luk"
        className="modal-window--close-btn"
        onClick={undefined}
        src="Kryds.svg"
      />
      <div
        className="modal-window--header text-center"
      >
        <h3 />
      </div>
      <div
        className="modal-window--content"
      >
        <p>
          Der var noget i huskelisten før du loggede ind. Derfor overføres følgende til din i forvejen gemte huskeliste:
        </p>
        <ul />
      </div>
      <div
        className="modal-window--buttons text-center"
      >
        <span
          className="btn btn-success"
          onClick={[Function]}
        >
          OK
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShortListDropDown short list is empty and merge modal is hidden 1`] = `
<div
  className="short-list"
>
  <div
    className="short-list--btn"
    onClick={[Function]}
  >
    <img
      alt=""
      src="Huskeliste.svg"
      title="Huskeliste"
    />
  </div>
  <div
    className="short-list--content text-left slide-out"
  >
    <img
      alt="luk"
      className="short-list--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="short-list--header"
    >
      HUSKELISTE
    </div>
    <div
      className="short-list--empty-text text-center"
    >
      Din huskeliste er tom
    </div>
    <div
      className="short-list--elements"
    />
  </div>
  <div
    className="modal-backdrop modal-hidden"
  >
    <div
      className="modal-window text-left modal-hidden "
    >
      <img
        alt="luk"
        className="modal-window--close-btn"
        onClick={undefined}
        src="Kryds.svg"
      />
      <div
        className="modal-window--header text-center"
      >
        <h3 />
      </div>
      <div
        className="modal-window--content"
      >
        <p>
          Der var noget i huskelisten før du loggede ind. Derfor overføres følgende til din i forvejen gemte huskeliste:
        </p>
        <ul />
      </div>
      <div
        className="modal-window--buttons text-center"
      >
        <span
          className="btn btn-success"
          onClick={[Function]}
        >
          OK
        </span>
      </div>
    </div>
  </div>
</div>
`;
